--- a/index.html
+++ b/index.html
@@ -23,13 +23,20 @@
         </div>
         <ul>
                 <li> 
-                    <a href="#"> Inscreva-se no NLW </a> </li>
+                    <a href="#"> Inscreva-se no NLW </a> 
+                </li>
+
                 <li> 
-                    <a href="#"> Veja meu portfólio </a> </li>
+                    <a href="#"> Veja meu portfólio </a> 
+                </li>
+
                 <li>
-                    <a href="#"> Baixe o meu e-book </a> </li>
+                    <a href="#"> Baixe o meu e-book </a> 
+                </li>
+                
                 <li>
-                    <a href="https://www.rocketseat.com.br/explorer" target="_blank"> Conheca o explorer </a> </li>           
+                    <a href="https://www.rocketseat.com.br/explorer" target="_blank"> Conheca o explorer </a> 
+                </li>           
         </ul>
         <div id="social-links">
             <a href="https://www.github.com/ezequielrabello" target="_blank">
