--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="profile">
                 <img 
                     src="assets/avatar_k.png" alt="foto da Tanya para o curso de Ingles"/>
-                <p> @tanyavladr </p> 
+                <p> @ezequielrabello </p> 
         </div>
         <div id="switch" onclick="toggleMode()">
             <button></button>
@@ -33,7 +33,7 @@
                 <li>
                     <a href="#"> Baixe o meu e-book </a> 
                 </li>
-                
+
                 <li>
                     <a href="https://www.rocketseat.com.br/explorer" target="_blank"> Conheca o explorer </a> 
                 </li>           
