--- a/index.html
+++ b/index.html
@@ -23,32 +23,32 @@
         </div>
         <ul>
                 <li> 
-                    <a href="#"> Inscreva-se no NLW </a> 
+                    <a href="#"> Sign Up for my page </a> 
                 </li>
 
                 <li> 
-                    <a href="#"> Veja meu portfólio </a> 
+                    <a href="#"> Check out my Portfolio </a> 
                 </li>
 
                 <li>
-                    <a href="#"> Baixe o meu e-book </a> 
+                    <a href="#"> Download my e-book </a> 
                 </li>
 
                 <li>
-                    <a href="https://www.rocketseat.com.br/explorer" target="_blank"> Conheca o explorer </a> 
+                    <a href="#"> About me </a> 
                 </li>           
         </ul>
         <div id="social-links">
-            <a href="https://www.github.com/ezequielrabello" target="_blank">
+            <a href="https://www.github.com/" target="_blank">
                 <ion-icon name="logo-github"></ion-icon> 
             </a>
-            <a href="https://www.instagram.com/kielrpl1" target="_blank"> 
+            <a href="https://www.instagram.com" target="_blank"> 
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
             <a href="https://www.youtube.com" target="_blank"> 
                 <ion-icon name="logo-youtube"></ion-icon>
             </a>
-            <a href="https://www.linkedin.com/in/ezequiel-rabello-1587002aa/" target="_blank"> 
+            <a href="https://www.linkedin.com/" target="_blank"> 
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
         </div>
